penambahan fitur whatsapp

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,11 +41,6 @@
                     <li><a href="pages/contact.html">Kontak</a></li>
                 </ul>
             </nav>
-            <div class="header-cta">
-                <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
-                </a>
-            </div>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -302,5 +297,6 @@
     <script src="js/device-detector.js"></script>
     <script src="js/main.js"></script>
     <script src="js/navigation.js"></script>
+    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
