--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,11 +43,6 @@
                     <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </nav>
-            <div class="header-cta">
-                <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
-                </a>
-            </div>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -125,22 +120,38 @@
                     </div>
 
                     <h3 style="margin-top: 30px; color: #4CAF50;"><i class="far fa-rectangle-list fa-icon-green"></i> Hubungi Sekolah Langsung</h3>
-                    <div class="program-grid" style="margin-top: 20px;">
-                        <div class="program-card">
-                            <h4><i class="fas fa-palette fa-icon-green"></i> TK Maarif</h4>
-                            <p><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> +62-XXX-XXXX<br><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> tk@mwcnu.edu</p>
+                    <div class="school-contact-grid">
+                        <div class="program-card school-contact-card">
+                            <div class="school-icon"><i class="fas fa-palette"></i></div>
+                            <h4 class="school-name">TK Maarif</h4>
+                            <div class="school-contact-meta">
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62-XXX-XXXX</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>tk@mwcnu.edu</span></p>
+                            </div>
                         </div>
-                        <div class="program-card">
-                            <h4><i class="far fa-book fa-icon-green"></i> SD Maarif</h4>
-                            <p><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> +62-XXX-XXXX<br><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> sd@mwcnu.edu</p>
+                        <div class="program-card school-contact-card">
+                            <div class="school-icon"><i class="far fa-book"></i></div>
+                            <h4 class="school-name">SD Maarif NU</h4>
+                            <div class="school-contact-meta">
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>0318056932</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>sdmaarifnungaban@gmail.com</span></p>
+                            </div>
                         </div>
-                        <div class="program-card">
-                            <h4><i class="fas fa-shield fa-icon-green"></i> MTs Maarif</h4>
-                            <p><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> +62-XXX-XXXX<br><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> mts@mwcnu.edu</p>
+                        <div class="program-card school-contact-card">
+                            <div class="school-icon"><i class="fas fa-shield"></i></div>
+                            <h4 class="school-name">MTs Maarif NU</h4>
+                            <div class="school-contact-meta">
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62-XXX-XXXX</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>mts@mwcnu.edu</span></p>
+                            </div>
                         </div>
-                        <div class="program-card">
-                            <h4><i class="fas fa-wrench fa-icon-green"></i> SMK Maarif</h4>
-                            <p><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> +62-XXX-XXXX<br><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> smk@mwcnu.edu</p>
+                        <div class="program-card school-contact-card">
+                            <div class="school-icon"><i class="fas fa-wrench"></i></div>
+                            <h4 class="school-name">SMK Maarif</h4>
+                            <div class="school-contact-meta">
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>0318961945</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>smk.maariftanggulangin@yahoo.co.id</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -310,6 +321,7 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
-
+    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
+
 </html>
