--- a/pages/smk.html
+++ b/pages/smk.html
@@ -41,11 +41,6 @@
                     <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </nav>
-            <div class="header-cta">
-                <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
-                </a>
-            </div>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -69,18 +64,23 @@
             <div class="stats-container">
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-chalkboard-user fa-icon-green"></i></span>
-                    <div class="stat-number">32</div>
+                    <div class="stat-number">13</div>
                     <div class="stat-label">Guru dan Pendidik</div>
                 </div>
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-user-graduate fa-icon-green"></i></span>
-                    <div class="stat-number">280+</div>
+                    <div class="stat-number">300+</div>
                     <div class="stat-label">Siswa Aktif</div>
                 </div>
                 <div class="stat-card">
                     <span class="stat-icon"><i class="fas fa-building fa-icon-green"></i></span>
-                    <div class="stat-number">20</div>
-                    <div class="stat-label">Laboratorium & Studio</div>
+                    <div class="stat-number">10</div>
+                    <div class="stat-label">Kelas</div>
+                </div>
+                 <div class="stat-card">
+                    <span class="stat-icon"><i class="fas fa-building fa-icon-green"></i></span>
+                    <div class="stat-number">2</div>
+                    <div class="stat-label">Laboratorium & Perpustakaan</div>
                 </div>
             </div>
         </section>
@@ -255,5 +255,6 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
