--- a/pages/bp3nu-profile.html
+++ b/pages/bp3nu-profile.html
@@ -43,11 +43,6 @@
                     <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </nav>
-            <div class="header-cta">
-                <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
-                </a>
-            </div>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -272,6 +267,7 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
-
+    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
+
 </html>
