--- a/pages/tk.html
+++ b/pages/tk.html
@@ -41,11 +41,7 @@
                     <li><a href="contact.html">Kontak</a></li>
                 </ul>
             </nav>
-            <div class="header-cta">
-                <a href="tel:+62812800827" class="cta-button">
-                    <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
-                </a>
-            </div>
+
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
@@ -68,18 +64,18 @@
             <h2>Statistik Sekolah</h2>
             <div class="stats-container">
                 <div class="stat-card">
-                    <span class="stat-icon">👨‍🏫</span>
-                    <div class="stat-number">12</div>
+                    <span class="stat-icon"><i class="fas fa-chalkboard-user fa-icon-green"></i></span>
+                    <div class="stat-number">4</div>
                     <div class="stat-label">Guru dan Pendidik</div>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-icon">👶</span>
-                    <div class="stat-number">150+</div>
+                    <span class="stat-icon"><i class="fas fa-child fa-icon-green"></i></span>
+                    <div class="stat-number">45+</div>
                     <div class="stat-label">Siswa Aktif</div>
                 </div>
                 <div class="stat-card">
-                    <span class="stat-icon">🏛️</span>
-                    <div class="stat-number">6</div>
+                    <span class="stat-icon"><i class="fas fa-building fa-icon-green"></i></span>
+                    <div class="stat-number">3</div>
                     <div class="stat-label">Ruang Kelas</div>
                 </div>
             </div>
@@ -255,5 +251,6 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
+    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
