Perbaikan nomer floating whatsapp

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,30 +52,28 @@
     </header>
 
     <main class="container">
-        <!-- Hero Section -->
-        <section class="hero-section-school">
-            <h2>Hubungi Kami</h2>
-            <p>Kami Siap Membantu Menjawab Pertanyaan Anda tentang Pendidikan di MWC NU</p>
-        </section>
-
         <!-- Informasi Kontak -->
         <section>
             <h2><i class="fas fa-map-pin fa-icon-green"></i> Informasi Kontak Utama</h2>
+            <h3 style="color: #4CAF50;">Hubungi Kami</h3>
+            <h4 style="color: #666; margin-bottom: 20px;">Kami siap membantu Anda dengan pertanyaan atau informasi yang Anda butuhkan.</h4>
+
             <div class="contact-container">
                 <div class="contact-info">
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-map-pin fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>Alamat Kantor</h4>
-                            <p>Jln. Pendidikan No. 123<br>Kelurahan Sejahtera, Kecamatan Maju<br>Kota / Kabupaten, Provinsi 12345<br>Indonesia</p>
+                            <p>jl. Raya Ngaban,Utara pasar, Ngaban<br>kec. Tanggulangin,kab. Sidoarjo 61272<br>Indonesia</p>
                         </div>
                     </div>
-
+                
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-phone fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>Telepon</h4>
-                            <p>+62 (XXX) XXX-XXXX<br>+62 (XXX) XXX-XXXX</p>
+                            <p>+62 838-5357-7035</p>
+                            <p>+62 852-3513-7630</p>
                         </div>
                     </div>
 
@@ -83,7 +81,8 @@
                         <div class="contact-icon"><i class="fas fa-comments fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>WhatsApp</h4>
-                            <p><a href="https://wa.me/62xxxxxxxxxx" style="color: #4CAF50; text-decoration: none;">+62XXX-XXXX-XXXX</a></p>
+                            <p><a href="https://wa.me/6283853577035" style="color: #4CAF50; text-decoration: none;">+62 838-5357-7035</a></p>
+                            <p><a href="https://wa.me/6285235137630" style="color: #4CAF50; text-decoration: none;">+62 852-3513-7630</a></p>
                         </div>
                     </div>
 
@@ -91,8 +90,7 @@
                         <div class="contact-icon"><i class="fas fa-envelope fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <p><a href="mailto:info@mwcnu.edu" style="color: #4CAF50; text-decoration: none;">info@mwcnu.edu</a><br>
-                            <a href="mailto:pendaftaran@mwcnu.edu" style="color: #4CAF50; text-decoration: none;">pendaftaran@mwcnu.edu</a></p>
+                            <p><a href="mailto:info@mwcnu.edu" style="color: #4CAF50; text-decoration: none;">bpppmnut@gmail.com</a><br>
                         </div>
                     </div>
 
@@ -100,33 +98,38 @@
                         <div class="contact-icon"><i class="fas fa-clock fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>Jam Operasional</h4>
-                            <p><strong>Hari Kerja (Senin-Jumat):</strong> 07:00 - 16:00<br>
+                            <p><strong>Hari Kerja (Senin-Jumat):</strong> 08:00 - 16:00<br>
                             <strong>Istirahat:</strong> 12:00 - 13:00<br>
                             <strong>Sabtu:</strong> 08:00 - 12:00<br>
                             <strong>Minggu & Hari Libur:</strong> Tutup</p>
                         </div>
                     </div>
+
+                    <div class="contact-item">
+                        <div class="contact-icon"><i class="fas fa-globe fa-icon-green"></i></div>
+                        <div class="contact-details">
+                            <h4>Ikuti Kami di Media Sosial</h4>
+                            <p>Dapatkan update terbaru tentang pendidikan dan kegiatan sekolah kami:</p>
+                            <div class="social-links" style="justify-content: flex-start; margin-top: 10px;">
+                                <a href="https://www.facebook.com/bpppmnutanggulangin" target="_blank" title="Facebook"><i class="fab fa-facebook fa-icon-green" style="font-size: 1.5em;"></i></a>
+                                <a href="https://www.instagram.com/bpppmnutanggulangin" target="_blank" title="Instagram"><i class="fab fa-instagram fa-icon-green" style="font-size: 1.5em;"></i></a>
+                                <a href="https://youtube.com/@bpppmnutanggulangin" target="_blank" title="YouTube"><i class="fab fa-youtube fa-icon-green" style="font-size: 1.5em;"></i></a>
+                                <a href=" https://www.tiktok.com/@bpppmnu_tanggulangin" target="_blank" title="TikTok"><i class="fab fa-tiktok fa-icon-green" style="font-size: 1.5em;"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="contact-info">
-                    <h3 style="margin-top: 0; color: #4CAF50;"><i class="fas fa-globe fa-icon-green"></i> Ikuti Kami di Media Sosial</h3>
-                    <p style="text-align: center; margin-bottom: 20px;">Dapatkan update terbaru tentang pendidikan dan kegiatan sekolah kami:</p>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/mwcnu" target="_blank" title="Facebook"><i class="fab fa-facebook fa-icon-green" style="font-size: 1.5em;"></i></a>
-                        <a href="https://www.instagram.com/mwcnu" target="_blank" title="Instagram"><i class="fab fa-instagram fa-icon-green" style="font-size: 1.5em;"></i></a>
-                        <a href="https://www.youtube.com/@mwcnu" target="_blank" title="YouTube"><i class="fab fa-youtube fa-icon-green" style="font-size: 1.5em;"></i></a>
-                        <a href="https://www.tiktok.com/@mwcnu" target="_blank" title="TikTok"><i class="fab fa-tiktok fa-icon-green" style="font-size: 1.5em;"></i></a>
-                        <a href="https://twitter.com/mwcnu" target="_blank" title="Twitter"><i class="fab fa-x-twitter fa-icon-green" style="font-size: 1.5em;"></i></a>
-                    </div>
-
-                    <h3 style="margin-top: 30px; color: #4CAF50;"><i class="far fa-rectangle-list fa-icon-green"></i> Hubungi Sekolah Langsung</h3>
+                    <h3 style="margin-top: 0; color: #4CAF50;"><i class="far fa-rectangle-list fa-icon-green"></i> Hubungi Sekolah Langsung</h3>
                     <div class="school-contact-grid">
                         <div class="program-card school-contact-card">
                             <div class="school-icon"><i class="fas fa-palette"></i></div>
                             <h4 class="school-name">TK Maarif</h4>
                             <div class="school-contact-meta">
-                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62-XXX-XXXX</span></p>
-                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>tk@mwcnu.edu</span></p>
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62 852-3513-7630</span></p>
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62 838-5357-7035</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>bpppmnut@gmail.com</span></p>
                             </div>
                         </div>
                         <div class="program-card school-contact-card">
@@ -141,8 +144,9 @@
                             <div class="school-icon"><i class="fas fa-shield"></i></div>
                             <h4 class="school-name">MTs Maarif NU</h4>
                             <div class="school-contact-meta">
-                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62-XXX-XXXX</span></p>
-                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>mts@mwcnu.edu</span></p>
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62 852-3513-7630</span></p>
+                                <p class="school-contact-item"><i class="fas fa-phone"></i><span>+62 838-5357-7035</span></p>
+                                <p class="school-contact-item"><i class="fas fa-envelope"></i><span>bpppmnut@gmail.com</span></p>
                             </div>
                         </div>
                         <div class="program-card school-contact-card">
@@ -161,19 +165,22 @@
         <!-- Peta Lokasi -->
         <section>
             <h2><i class="fas fa-map fa-icon-green"></i> Lokasi Kantor</h2>
-            <div style="background: #f0f7f0; padding: 30px; border-radius: 12px; text-align: center; color: #666;">
-                <p style="font-size: 1.1em; margin: 0;">
-                    <strong>Peta lokasi kantor kami akan ditampilkan di sini</strong><br>
-                    Integrasi Google Maps dapat ditambahkan untuk menunjukkan lokasi yang tepat.
-                </p>
-                <p style="margin-top: 15px;">
-                    Gunakan aplikasi peta favorit Anda dan cari: <strong>"Majelis Wakil Cabang Nahdlatul Ulama, Kota"</strong>
-                </p>
+            <div style="border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.0!2d112.7!3d-7.5!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMDAuMCJTIDExMsKwNDInMDAuMCJF!5e0!3m2!1sen!2sid!4v1!5m2!1sen!2sid&q=Jl.+Raya+Ngaban%2C+Utara+pasar%2C+Ngaban%2C+Kec.+Tanggulangin%2C+Kab.+Sidoarjo+61272" 
+                    width="100%" 
+                    height="450" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </section>
 
+
         <!-- Formulir Kontak -->
-        <section>
+        <!-- <section>
             <h2><i class="fas fa-envelope fa-icon-green"></i> Formulir Hubungi Kami</h2>
             <p style="text-align: center; margin-bottom: 20px;">Silakan isi formulir di bawah ini. Kami akan merespons pertanyaan Anda secepatnya.</p>
             <form class="registration-form">
@@ -217,7 +224,7 @@
 
                 <button type="submit" class="form-submit"><i class="fas fa-paper-plane fa-icon-green"></i> Kirim Pesan</button>
             </form>
-        </section>
+        </section> -->
 
         <!-- FAQ -->
         <section>
@@ -296,8 +303,9 @@
                 <h4>Hubungi Kami</h4>
                 <div class="site-contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Jl. Raya Tanggulangin, Sidoarjo, Jawa Timur</p>
+                    <p>jl. Raya Ngaban, Utara pasar, Ngaban<br>kec. Tanggulangin, kab. Sidoarjo 61272</p>
                 </div>
+
                 <div class="site-contact-item">
                     <i class="fas fa-phone-alt"></i>
                     <p>(031) 8960 000 / 0812-8008-0275</p>
@@ -321,7 +329,8 @@
     <script src="../js/device-detector.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/navigation.js"></script>
-    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.me/+6283853577035" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
+
 </body>
 
 </html>
