--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <p style="font-size: 1.15em; margin: 10px 0; font-weight: 500;">
                             <a href="tel:+6281280080275" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 10px; transition: all 0.3s ease;">
                                 <i class="fas fa-mobile-screen" style="color: #fff;"></i>
-                                +62 812 8008 0275
+                                +62 838-5357-7035
                             </a>
                         </p>
                         <p style="font-size: 0.95em; color: rgba(255, 255, 255, 0.9); margin: 5px 0;">WhatsApp & Telepon</p>
@@ -220,8 +220,7 @@
                     <div style="background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 8px;">
                         <h3 style="margin-top: 0; font-size: 1.3em; display: flex; align-items: center;"><i class="fas fa-map-pin" style="margin-right: 12px; color: white;"></i> Alamat</h3>
                         <p style="font-size: 0.95em; line-height: 1.8; margin: 10px 0; color: rgba(255, 255, 255, 0.95);">
-                            Majelis Wakil Cabang Nahdlatul Ulama<br>
-                            Sidoarjo - Indonesia
+                            jl. Raya Ngaban,Utara pasar, Ngaban, kec. Tanggulangin,kab. Sidoarjo 61272<br>
                         </p>
                         <a href="https://maps.google.com/maps?q=MWCNU+Sidoarjo" target="_blank" style="display: inline-block; margin-top: 15px; color: white; text-decoration: none; background: rgba(255, 255, 255, 0.2); padding: 10px 15px; border-radius: 5px; transition: all 0.3s ease; font-weight: 500;">
                             <i class="fas fa-directions" style="margin-right: 8px;"></i> Buka di Google Maps
@@ -297,6 +296,6 @@
     <script src="js/device-detector.js"></script>
     <script src="js/main.js"></script>
     <script src="js/navigation.js"></script>
-    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.me/+6283853577035" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </body>
 </html>
