--- a/pages/pendaftaran.html
+++ b/pages/pendaftaran.html
@@ -557,7 +557,8 @@
         // Initialize on page load
         window.addEventListener('DOMContentLoaded', initializeForm);
     </script>
-    <a href="https://wa.me/6281280080275" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://wa.me/+6283853577035" class="floating-whatsapp" target="_blank" aria-label="Chat WhatsApp"><i class="fab fa-whatsapp"></i></a>
+
 </body>
 
 </html>
