Perubahan format alamat dan maps

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿﻿﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -217,10 +217,10 @@
                         <p style="font-size: 0.95em; color: rgba(255, 255, 255, 0.9); margin: 5px 0;">WhatsApp & Telepon</p>
                     </div>
 
-                    <div style="background: rgba(255, 255, 255, 0.1); padding: 30px; border-radius: 8px;">
+                    <div style="background: rgba(255, 255, 255, 0.1); padding: 40px; border-radius: 8px;">
                         <h3 style="margin-top: 0; font-size: 1.3em; display: flex; align-items: center;"><i class="fas fa-map-pin" style="margin-right: 12px; color: white;"></i> Alamat</h3>
                         <p style="font-size: 0.95em; line-height: 1.8; margin: 10px 0; color: rgba(255, 255, 255, 0.95);">
-                            jl. Raya Ngaban,Utara pasar, Ngaban, kec. Tanggulangin,kab. Sidoarjo 61272<br>
+                            Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur<br>
                         </p>
                         <a href="https://maps.google.com/maps?q=MWCNU+Sidoarjo" target="_blank" style="display: inline-block; margin-top: 15px; color: white; text-decoration: none; background: rgba(255, 255, 255, 0.2); padding: 10px 15px; border-radius: 5px; transition: all 0.3s ease; font-weight: 500;">
                             <i class="fas fa-directions" style="margin-right: 8px;"></i> Buka di Google Maps
@@ -230,7 +230,7 @@
 
                 <!-- Map -->
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8340866024457!2d112.73804!3d-7.43!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e8ff9f7f7f7f%3A0x7f7f7f7f7f7f7f7f!2sSidoarjo!5e0!3m2!1sen!2sid!4v1" width="100%" height="100%" style="border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.8340866024457!2d112.73804!3d-7.43!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e8ff9f7f7f7f%3A0x7f7f7f7f7f7f7f7f!2sJl.%20Raya%20Ngaban%20(Utara%20Pasar%20Ngaban),%20Ngaban,%20Tanggulangin,%20Sidoarjo%2061272,%20Jawa%20Timur!5e0!3m2!1sen!2sid!4v1" width="100%" height="100%" style="border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -271,15 +271,15 @@
                 <h4>Hubungi Kami</h4>
                 <div class="site-contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Jl. Raya Tanggulangin, Sidoarjo, Jawa Timur</p>
+                    <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur</p>
                 </div>
                 <div class="site-contact-item">
                     <i class="fas fa-phone-alt"></i>
-                    <p>(031) 8960 000 / 0812-8008-0275</p>
+                    <p>+62 838-5357-7035/+62 852-3513-7630</p>
                 </div>
                 <div class="site-contact-item">
                     <i class="far fa-envelope"></i>
-                    <p>info@mwcnu-tanggulangin.sch.id</p>
+                    <p>bpppmnut@gmail.com</p>
                 </div>
             </div>
         </div>
