--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,7 +64,7 @@
                         <div class="contact-icon"><i class="fas fa-map-pin fa-icon-green"></i></div>
                         <div class="contact-details">
                             <h4>Alamat Kantor</h4>
-                            <p>jl. Raya Ngaban,Utara pasar, Ngaban<br>kec. Tanggulangin,kab. Sidoarjo 61272<br>Indonesia</p>
+                            <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur<br>Indonesia</p>
                         </div>
                     </div>
                 
@@ -303,16 +303,16 @@
                 <h4>Hubungi Kami</h4>
                 <div class="site-contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>jl. Raya Ngaban, Utara pasar, Ngaban<br>kec. Tanggulangin, kab. Sidoarjo 61272</p>
+                    <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur</p>
                 </div>
 
                 <div class="site-contact-item">
                     <i class="fas fa-phone-alt"></i>
-                    <p>(031) 8960 000 / 0812-8008-0275</p>
+                    <p>+62 838-5357-7035 / +62 852-3513-7630</p>
                 </div>
                 <div class="site-contact-item">
                     <i class="far fa-envelope"></i>
-                    <p>info@mwcnu-tanggulangin.sch.id</p>
+                    <p>bpppmnut@gmail.com</p>
                 </div>
             </div>
         </div>
