--- a/pages/blog-detail.html
+++ b/pages/blog-detail.html
@@ -567,15 +567,15 @@
                 <h4>Hubungi Kami</h4>
                 <div class="detail-contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Jl. Raya Tanggulangin, Sidoarjo, Jawa Timur</p>
+                    <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur</p>
                 </div>
                 <div class="detail-contact-item">
                     <i class="fas fa-phone-alt"></i>
-                    <p>(031) 8960 000 / 0812-8008-0275</p>
+                    <p>+62 838-5357-7035 / +62 852-3513-7630</p>
                 </div>
                 <div class="detail-contact-item">
                     <i class="far fa-envelope"></i>
-                    <p>info@mwcnu-tanggulangin.sch.id</p>
+                    <p>bpppmnut@gmail.com</p>
                 </div>
             </div>
         </div>
