--- a/pages/mts.html
+++ b/pages/mts.html
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <p style="text-align: center; margin-top: 30px; font-size: 1.1em;"><strong>Hubungi Kami:</strong></p>
-            <p style="text-align: center; font-size: 1.05em;"><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> Email: info@mwcnu.edu<br><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> Telepon: (XXX) XXX-XXXX</p>
+            <p style="text-align: center; font-size: 1.05em;"><i class="fas fa-envelope" style="color: #2e7d32; margin-right: 5px;"></i> Email: bpppmnut@gmail.com<br><i class="fas fa-phone" style="color: #2e7d32; margin-right: 5px;"></i> Telepon: +62 838-5357-7035</p>
         </section>
     </main>
     <footer class="site-footer-modern">
@@ -225,15 +225,15 @@
                 <h4>Hubungi Kami</h4>
                 <div class="site-contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Jl. Raya Tanggulangin, Sidoarjo, Jawa Timur</p>
+                    <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur</p>
                 </div>
                 <div class="site-contact-item">
                     <i class="fas fa-phone-alt"></i>
-                    <p>(031) 8960 000 / 0812-8008-0275</p>
+                    <p>+62 838-5357-7035 / +62 852-3513-7630</p>
                 </div>
                 <div class="site-contact-item">
                     <i class="far fa-envelope"></i>
-                    <p>info@mwcnu-tanggulangin.sch.id</p>
+                    <p>bpppmnut@gmail.com</p>
                 </div>
             </div>
         </div>
