--- a/pages/pendaftaran.html
+++ b/pages/pendaftaran.html
@@ -387,9 +387,65 @@
         </form>
     </div>
 
-    <footer>
-        <p>&copy; 2023 Majelis Wakil Cabang Nahdlatul Ulama. All rights reserved.</p>
+    <footer class="site-footer-modern">
+        <div class="site-footer-inner">
+            <div>
+                <div class="site-footer-brand">
+                    <img src="../assets/images/nu-logo.png" alt="Logo MWCNU">
+                    <h3>MWCNU Tanggulangin</h3>
+                </div>
+                <p>Membangun generasi berakhlak, unggul, dan siap menghadapi masa depan.</p>
+                <div class="site-footer-social">
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div>
+                <h4>Tautan Cepat</h4>
+                <ul>
+                    <li><a href="../index.html">Beranda</a></li>
+                    <li><a href="../index.html#visi-misi">Visi & Misi</a></li>
+                    <li><a href="blog.html">Berita</a></li>
+                    <li><a href="contact.html">Kontak</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Akademik</h4>
+                <ul>
+                    <li><a href="tk.html">Taman Kanak-Kanak (TK)</a></li>
+                    <li><a href="sd-maarif.html">Sekolah Dasar Maarif (SD)</a></li>
+                    <li><a href="mts.html">Madrasah Tsanawiyah (MTs)</a></li>
+                    <li><a href="smk.html">Sekolah Menengah Kejuruan (SMK)</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Hubungi Kami</h4>
+                <div class="site-contact-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Jl. Raya Ngaban (Utara Pasar Ngaban), Ngaban, Tanggulangin, Sidoarjo 61272, Jawa Timur</p>
+                </div>
+                <div class="site-contact-item">
+                    <i class="fas fa-phone-alt"></i>
+                    <p>+62 838-5357-7035/+62 852-3513-7630</p>
+                </div>
+                <div class="site-contact-item">
+                    <i class="far fa-envelope"></i>
+                    <p>bpppmnut@gmail.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="site-footer-bottom">
+            <div class="site-footer-bottom-inner">
+                <p>&copy; 2026 MWCNU Tanggulangin. All rights reserved.</p>
+                <div class="site-footer-policy">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+            </div>
+        </div>
     </footer>
+
 
     <!-- Supabase CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
