--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿﻿﻿﻿<!DOCTYPE html>
+﻿﻿﻿﻿﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
                         </ul>
                     </li>
                     <li><a href="pages/blog.html">Blog</a></li>
-                    <li><a href="pages/contact.html">Kontak</a></li>
+                    <li><a href="login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
