--- a/pages/blog-detail.html
+++ b/pages/blog-detail.html
@@ -458,9 +458,10 @@
                         </ul>
                     </li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
+                    <li><a href="../login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
+
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
