--- a/pages/bp3nu-profile.html
+++ b/pages/bp3nu-profile.html
@@ -40,9 +40,10 @@
                         </ul>
                     </li>
                     <li><a href="../index.html#blog">Blog</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
+                    <li><a href="../login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
+
             <button class="hamburger-menu" id="hamburgerMenu" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
