--- a/pages/spmb.html
+++ b/pages/spmb.html
@@ -40,9 +40,10 @@
                         </ul>
                     </li>
                     <li><a href="../index.html#blog">Blog</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
+                    <li><a href="../login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
+
             <div class="header-cta">
                 <a href="tel:+62812800827" class="cta-button">
                     <i class="fas fa-phone"></i> <span class="phone-text">+62 812 8008 0275</span>
