--- a/pages/tk.html
+++ b/pages/tk.html
@@ -38,7 +38,7 @@
                         </ul>
                     </li>
                     <li><a href="../index.html#blog">Blog</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
+                    <li><a href="../login.html" class="login-btn-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </nav>
 
