perbaikan navbar blog

--- a/pages/blog-detail.html
+++ b/pages/blog-detail.html
@@ -26,7 +26,9 @@
             background: #fff;
             border-bottom: 1px solid #e9ecef;
             backdrop-filter: none;
+            z-index: 1100;
         }
+
         body.blog-detail-page .main-header .logo h1,
         body.blog-detail-page .main-header .main-nav a {
             color: #0b6156;
